Fixed alignment of box,changed static figures and removed font-family

--- a/dashboard/src/components/Header/Header.module.css
+++ b/dashboard/src/components/Header/Header.module.css
@@ -26,8 +26,7 @@
 .heading-content{
     color: #1D1D1D;
     font-size: 25px;
-    font-weight: lighter;
-    font-family: 'Proxima Nova';
+    font-weight: normal;
     padding-left: 5px;
     padding-top: 10px;
 }
